--- a/customer-service/src/main/resources/application.properties
+++ b/customer-service/src/main/resources/application.properties
@@ -3,9 +3,9 @@
 #spring.application.name=customer
 #spring.output.ansi.enabled=ALWAYS
 #
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
-#spring.datasource.url=jdbc:postgresql://localhost:5432/customer
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.url=jdbc:postgresql://localhost:${DB_PORT}/customer
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
