--- a/customer-service/pom.xml
+++ b/customer-service/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.randriiv</groupId>
-        <artifactId>ra-microservice</artifactId>
+        <artifactId>microservices</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
