--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.randriiv</groupId>
-    <artifactId>ra-microservice</artifactId>
+    <artifactId>microservices</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>ra-microservice</name>
+    <name>microservices</name>
     <url>http://maven.apache.org</url>
     <modules>
         <module>customer-service</module>
