--- a/fraud-service/src/main/resources/application.yml
+++ b/fraud-service/src/main/resources/application.yml
@@ -1,16 +1,16 @@
 server:
-  port: 8080
+  port: 8081
 
 spring:
   application:
-    name: customer-service
+    name: fraud-service
   output:
     ansi:
       enabled: ALWAYS
   datasource:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
-    url: jdbc:postgresql://localhost:${DB_PORT}/customer
+    url: jdbc:postgresql://localhost:${DB_PORT}/fraud
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
