3. Add RestTemplate for testing Microservice Communication

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 DB_USERNAME=
 DB_PASSWORD=
-DB_PORT=
+DB_SERVER_HOST=
+DB_SERVER_PORT=
 PGADMIN_DEFAULT_EMAIL=
 PGADMIN_DEFAULT_PASSWORD=
+FRAUD_SERVER_HOST=
+FRAUD_SERVER_PORT=
+CUSTOMER_SERVER_HOST=
+CUSTOMER_SERVER_PORT=
