--- a/fraud-service/src/main/resources/application.yml
+++ b/fraud-service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8081
+  port: ${FRAUD_SERVER_PORT}
 
 spring:
   application:
@@ -10,7 +10,7 @@ spring:
   datasource:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
-    url: jdbc:postgresql://localhost:${DB_PORT}/fraud
+    url: jdbc:postgresql://${DB_SERVER_HOST}:${DB_SERVER_PORT}/fraud
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
