--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <maven.compiler.target>21</maven.compiler.target>
         <spring.boot.verion>3.5.6</spring.boot.verion>
         <spring.cloud.verion>2025.0.0</spring.cloud.verion>
+<!--        <spring.cloud.verion>2020.0.3</spring.cloud.verion>-->
     </properties>
 
     <dependencyManagement>
@@ -74,5 +75,15 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>16</source>
+                    <target>16</target>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
