--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>customer-service</module>
         <module>fraud-service</module>
         <module>eureka-server</module>
+        <module>clients</module>
     </modules>
 
     <properties>
@@ -62,6 +63,10 @@
             <groupId>me.paulschwarz</groupId>
             <artifactId>spring-dotenv</artifactId>
             <version>4.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
     </dependencies>
 
