--- a/fraud-service/src/main/resources/application.yml
+++ b/fraud-service/src/main/resources/application.yml
@@ -24,6 +24,6 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://localhost:${EUREKA_SERVER_PORT}/eureka
     fetch-registry: true
     register-with-eureka: true
