--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -1,16 +1,16 @@
 server:
-  port: ${CUSTOMER_SERVER_PORT}
+  port: ${NOTIFICATION_SERVER_PORT}
 
 spring:
   application:
-    name: customer-service
+    name: notification-service
   output:
     ansi:
       enabled: ALWAYS
   datasource:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
-    url: jdbc:postgresql://${DB_SERVER_HOST}:${DB_SERVER_PORT}/customer
+    url: jdbc:postgresql://${DB_SERVER_HOST}:${DB_SERVER_PORT}/notification
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
