--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -19,11 +19,12 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
-        <spring.boot.verion>3.5.6</spring.boot.verion>
-        <spring.cloud.verion>2025.0.0</spring.cloud.verion>
-<!--        <spring.cloud.verion>2020.0.3</spring.cloud.verion>-->
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <!--        <spring.boot.verion>3.5.6</spring.boot.verion>-->
+        <spring.boot.verion>2.5.7</spring.boot.verion>
+        <!--        <spring.cloud.verion>2025.0.0</spring.cloud.verion>-->
+        <spring.cloud.verion>2020.0.3</spring.cloud.verion>
     </properties>
 
     <dependencyManagement>
