7. Distributed Tracing (Spring Cloud Sleuth/Zipkin)

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ CUSTOMER_SERVER_HOST=
 CUSTOMER_SERVER_PORT=
 EUREKA_SERVER_PORT=
 NOTIFICATION_SERVER_PORT=
+ZIPKIN_SERVER_HOST=
+ZIPKIN_SERVER_PORT=
