8. Add Api Gateway With Spring Cloud Gateway

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,9 @@ FRAUD_SERVER_HOST=
 FRAUD_SERVER_PORT=
 CUSTOMER_SERVER_HOST=
 CUSTOMER_SERVER_PORT=
+EUREKA_SERVER_HOST=
 EUREKA_SERVER_PORT=
 NOTIFICATION_SERVER_PORT=
 ZIPKIN_SERVER_HOST=
 ZIPKIN_SERVER_PORT=
+API_GATEWAY_SERVER_PORT=
