9. Add RabbitMQ implementation for Customer/Notification services

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,8 @@ NOTIFICATION_SERVER_PORT=
 ZIPKIN_SERVER_HOST=
 ZIPKIN_SERVER_PORT=
 API_GATEWAY_SERVER_PORT=
+RABBITMQ_HOST=
+RABBITMQ_PORT=
+RABBITMQ_EXCHANGE=
+RABBITMQ_QUEUE=
+RABBITMQ_ROUTING_KEY=
