--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -23,6 +23,9 @@ spring:
   zipkin:
     base-url: http://${ZIPKIN_SERVER_HOST}:${ZIPKIN_SERVER_PORT}
 
+  rabbitmq:
+    addresses: ${RABBITMQ_HOST}:${RABBITMQ_PORT}
+
 eureka:
   client:
     service-url:
@@ -32,3 +35,11 @@ eureka:
   instance:
     prefer-ip-address: false
     hostname: ${EUREKA_SERVER_HOST}
+
+rabbitmq:
+  exchanges:
+    internal: ${RABBITMQ_EXCHANGE}
+  queue:
+    notification: ${RABBITMQ_QUEUE}
+  routing-keys:
+    internal-notification: ${RABBITMQ_ROUTING_KEY}
