11. Packaging Jars to Docker Images with Jib

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,30 @@
+#DB
 DB_USERNAME=
 DB_PASSWORD=
 DB_SERVER_HOST=
 DB_SERVER_PORT=
-PGADMIN_DEFAULT_EMAIL=
+#PG_ADMIN
 PGADMIN_DEFAULT_PASSWORD=
+PGADMIN_DEFAULT_EMAIL=
+#FRAUD_SERVICE
 FRAUD_SERVER_HOST=
 FRAUD_SERVER_PORT=
+#CUSTOMER_SERVICE
 CUSTOMER_SERVER_HOST=
 CUSTOMER_SERVER_PORT=
+#EUREKA_SERVER
 EUREKA_SERVER_HOST=
 EUREKA_SERVER_PORT=
+#NOTIFICATION_SERVICE
 NOTIFICATION_SERVER_PORT=
+NOTIFICATION_SERVER_HOST=
+#ZIPKIN
 ZIPKIN_SERVER_HOST=
 ZIPKIN_SERVER_PORT=
+#API_GATEWAY
 API_GATEWAY_SERVER_PORT=
+API_GATEWAY_SERVER_HOST=
+#RABBITMQ
 RABBITMQ_HOST=
 RABBITMQ_PORT=
 RABBITMQ_EXCHANGE=
