13. Refactoring Microservices for k8s
Signed-off-by: Roman Andriiv <roman.andriiv.dev@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,83 +50,83 @@ services:
     networks:
       - spring
 
-  eureka-server:
-    image: romanandriiv/eureka-server
-    container_name: eureka-server
-    env_file: .env.docker
-    environment:
-      - SPRING_PROFILES_ACTIVE=docker
-    ports:
-      - "8761:8761"
-    depends_on:
-      - zipkin
-    networks:
-      - spring
+  #  eureka-server:
+  #    image: romanandriiv/eureka-server
+  #    container_name: eureka-server
+  #    env_file: .env.docker
+  #    environment:
+  #      - SPRING_PROFILES_ACTIVE=docker
+  #    ports:
+  #      - "8761:8761"
+  #    depends_on:
+  #      - zipkin
+  #    networks:
+  #      - spring
 
-  api-gateway:
-    image: romanandriiv/api-gateway
-    env_file: .env.docker
-    container_name: api-gateway
-    environment:
-      - SPRING_PROFILES_ACTIVE=docker
-    ports:
-      - "8083:8083"
-    depends_on:
-      - zipkin
-      - eureka-server
-    networks:
-      - spring
+  #  api-gateway:
+  #    image: romanandriiv/api-gateway
+  #    env_file: .env.docker
+  #    container_name: api-gateway
+  #    environment:
+  #      - SPRING_PROFILES_ACTIVE=docker
+  #    ports:
+  #      - "8083:8083"
+  #    depends_on:
+  #      - zipkin
+  #      - eureka-server
+  #    networks:
+  #      - spring
 
-  customer-service:
-    image: romanandriiv/customer-service
-    container_name: customer-service
-    env_file: .env.docker
-    environment:
-      - SPRING_PROFILES_ACTIVE=docker
-    ports:
-      - "8080:8080"
-    depends_on:
-      - zipkin
-      - eureka-server
-      - postgres
-      - rabbitmq
-    networks:
-      - spring
-      - postgres
-
-  fraud-service:
-    image: romanandriiv/fraud-service
-    container_name: fraud-service
-    env_file: .env.docker
-    environment:
-      - SPRING_PROFILES_ACTIVE=docker
-    ports:
-      - "8081:8081"
-    depends_on:
-      - zipkin
-      - eureka-server
-      - postgres
-      - rabbitmq
-    networks:
-      - spring
-      - postgres
-
-  notification-service:
-    image: romanandriiv/notification-service
-    container_name: notification-service
-    env_file: .env.docker
-    environment:
-      - SPRING_PROFILES_ACTIVE=docker
-    ports:
-      - "8082:8082"
-    depends_on:
-      - zipkin
-      - eureka-server
-      - postgres
-      - rabbitmq
-    networks:
-      - spring
-      - postgres
+#  customer-service:
+#    image: romanandriiv/customer-service
+#    container_name: customer-service
+#    env_file: .env.docker
+#    environment:
+#      - SPRING_PROFILES_ACTIVE=docker
+#    ports:
+#      - "8080:8080"
+#    depends_on:
+#      - zipkin
+#      - eureka-server
+#      - postgres
+#      - rabbitmq
+#    networks:
+#      - spring
+#      - postgres
+#
+#  fraud-service:
+#    image: romanandriiv/fraud-service
+#    container_name: fraud-service
+#    env_file: .env.docker
+#    environment:
+#      - SPRING_PROFILES_ACTIVE=docker
+#    ports:
+#      - "8081:8081"
+#    depends_on:
+#      - zipkin
+#      - eureka-server
+#      - postgres
+#      - rabbitmq
+#    networks:
+#      - spring
+#      - postgres
+#
+#  notification-service:
+#    image: romanandriiv/notification-service
+#    container_name: notification-service
+#    env_file: .env.docker
+#    environment:
+#      - SPRING_PROFILES_ACTIVE=docker
+#    ports:
+#      - "8082:8082"
+#    depends_on:
+#      - zipkin
+#      - eureka-server
+#      - postgres
+#      - rabbitmq
+#    networks:
+#      - spring
+#      - postgres
 
 networks:
   postgres:
