--- a/customer-service/src/main/resources/application.yml
+++ b/customer-service/src/main/resources/application.yml
@@ -31,6 +31,7 @@ eureka:
       defaultZone: http://${eureka.instance.hostname}:${EUREKA_SERVER_PORT}/eureka
     fetch-registry: true
     register-with-eureka: true
+    enabled: false
   instance:
     prefer-ip-address: false
     hostname: ${EUREKA_SERVER_HOST}
